pkg/model/testdata/janus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  # placeholder for 'backstage-<cr-name>'
spec:
  replicas: 1
  selector:
    matchLabels:
      janus-idp.io/app:  # placeholder for 'backstage-<cr-name>'
  template:
    metadata:
      labels:
        janus-idp.io/app:  # placeholder for 'backstage-<cr-name>'
    spec:
      #      serviceAccountName: default
      volumes:
        - ephemeral:
            volumeClaimTemplate:
              spec:
                accessModes:
                  - ReadWriteOnce
                resources:
                  requests:
                    storage: 1Gi
          name: dynamic-plugins-root
        - name: dynamic-plugins-npmrc
          secret:
            defaultMode: 420
            optional: true
            secretName: dynamic-plugins-npmrc
#        - name: dynamic-plugins-conf
#          configMap:
#            name: default-dynamic-plugins
#            optional: true
#            items:
#              - key: dynamic-plugins.yaml
#                path: dynamic-plugins.yaml

      initContainers:
        - command:
            - ./install-dynamic-plugins.sh
            - /dynamic-plugins-root
          env:
            - name: NPM_CONFIG_USERCONFIG
              value: /opt/app-root/src/.npmrc.dynamic-plugins
          image: 'quay.io/janus-idp/backstage-showcase:next'
          imagePullPolicy: IfNotPresent
          name: install-dynamic-plugins
          volumeMounts:
            - mountPath: /dynamic-plugins-root
              name: dynamic-plugins-root
            - mountPath: /opt/app-root/src/.npmrc.dynamic-plugins
              name: dynamic-plugins-npmrc
              readOnly: true
              subPath: .npmrc
#            - mountPath: /opt/app-root/src/dynamic-plugins.yaml
#              subPath: dynamic-plugins.yaml
#              name: dynamic-plugins-conf
          workingDir: /opt/app-root/src

      containers:
        - name: backstage-backend    # placeholder for 'backstage-backend'
          image: quay.io/janus-idp/backstage-showcase:next
          imagePullPolicy: IfNotPresent
          args:
            - "--config"
            - "dynamic-plugins-root/app-config.dynamic-plugins.yaml"
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthcheck
              port: 7007
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 2
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthcheck
              port: 7007
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          ports:
            - name: backend
              containerPort: 7007
          env:
            - name: APP_CONFIG_backend_listen_port
              value: "7007"
          volumeMounts:
            - mountPath: /opt/app-root/src/dynamic-plugins-root
              name: dynamic-plugins-root
