pkg/model/testdata/raw-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: <to_be_replaced> # placeholder for 'backstage-<cr-name>'
spec:
  port:
    targetPort: http-backend
  path: /
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name:  # placeholder for 'backstage-<cr-name>'
